--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .titulo-principal{
-    text-align: center;
+    text-align: left;
     width: 100%;
     font-size: 32px;
     margin: 70px
